--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-native": "0.83.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.83.1",
+    "i18next": "^25.7.4",
+    "react": "19.2.0",
+    "react-i18next": "^16.5.3",
+    "react-native": "0.83.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@react-native/eslint-config": "0.83.1",
     "@react-native/metro-config": "0.83.1",
     "@react-native/typescript-config": "0.83.1",
+    "@types/i18next": "^12.1.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
