--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "@supabase/supabase-js": "^2.90.1",
     "i18next": "^25.7.4",
     "react": "19.2.0",
     "react-i18next": "^16.5.3",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0"
+    "react-native-screens": "^4.19.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
