--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
@@ -19,6 +21,7 @@
     "react": "19.2.0",
     "react-i18next": "^16.5.3",
     "react-native": "0.83.1",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
